--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Trey Marak</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="resetstyle" href="assets/css/style.css" />
+    <link rel="stylesheet" type="resetstyle" href="../assets/css/style.css" />
 </head>
 <body>
     <h1>Trey Marak</h1>
