--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trey Marak</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="resetstyle" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <img src="assets/images/IMG_3051.jpg" alt="Treys Photo" style="width: 90px;height: 90px">
 </head>
 <body>
     <h1>Trey Marak</h1>
@@ -18,4 +14,4 @@
 
     
 </body>
-</html>
+
