--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <head>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <img src="assets/images/IMG_3051.jpg" alt="Treys Photo" style="width: 90px;height: 90px">
+    <img src="assets/images/IMG_3051.jpg" alt="Treys Photo">
 </head>
 <body>
+    <div>
     <h1>Trey Marak</h1>
+    </div>
     
     <h2>About Me</h2>
     
