--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 </head>
 <body>
-    <div class="header">
-    <h1>Trey Marak</h1>
-    </div>
+<h1>Trey Marak</h1>
+
+<div class="header"></div>
     
     
    <section>
@@ -19,6 +19,10 @@
 
     <p>I decided to move on from the radio industry and obtained my MBA. I love to play golf, cook, and watch sports. I love all Dallas sports teams as well as Texas A&M Aggies! In my spare time, I'm a closet comic book nerd. I love to read and study comic book characters and events. Gig'em!</p>
    </section>
+
+   <div class="line"></div>
+   
+   <div class="footer"></div>
    
 </body>
 
