--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
 <h1>Trey Marak</h1>
 
-<div class="header"></div>
+<div class="header">
+</div>
     
     
-   <section>
+   <div class="section">
     <img src="assets/images/IMG_3051.jpg" alt="Treys Photo">
     <h2>About Me</h2>
 
@@ -18,10 +19,10 @@
     <p>Howdy! My name is Trey Marak and I was born and raised in Dallas, TX. I lived in the suburbs of Dallas in a town called Rockwall. I graduated from Texas A&M University in 2005 and started working in the televison industry. I then move into radio where I was a morning show producer for i93. The most fun I had is when we broadcasted live from behind the stage at the 2011 Grammys.</p>
 
     <p>I decided to move on from the radio industry and obtained my MBA. I love to play golf, cook, and watch sports. I love all Dallas sports teams as well as Texas A&M Aggies! In my spare time, I'm a closet comic book nerd. I love to read and study comic book characters and events. Gig'em!</p>
-   </section>
+   </div>
 
    <div class="line"></div>
-   
+
    <div class="footer"></div>
    
 </body>
