added header links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 <div class="header">
 </div>
+
+<div class="boxset">
+        <figure class="About">About</figure>
+        <figure class="Portfolio">Portfolio</figure>
+        <figure class="Contact">Contact</figure>
+</div>
     
     
    <div class="section">
