finish contact page

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
             <input type="text" id="femail" name="Email" placeholder="example@gmail.com">
             <label for="fmessage">Message</label>
             <input type="text" id="fmessage" name="Message">
+            <input type="submit" value="Submit">
 
        </div>
     
