added text labels

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     
        <div class="picture">
             <h2>Portfolio</h2>
-
+        <label for="Comic Books">Comic Books</label>
         <img src="assets/images/Comic Books.jpg" alt="Comic Books">
         <img src="assets/images/Cooking.jpg" alt="Cooking">
         <img src="assets/images/Golf.jpg" alt="Golf">
