--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,20 @@
             <h2>Portfolio</h2>
         <label for="Comic Books">Comic Books</label>
         <img src="assets/images/Comic Books.jpg" alt="Comic Books">
+
+        <label for="Cooking">Cooking</label>
         <img src="assets/images/Cooking.jpg" alt="Cooking">
+
+        <label for="Golf">Golf</label>
         <img src="assets/images/Golf.jpg" alt="Golf">
+
+        <label for="Music">Music</label>
         <img src="assets/images/Music.jpg" alt="Music">
+
+        <label for="Aggie Sports">Aggie Sports</label>
         <img src="assets/images/Aggie Sports.png" alt="Aggie Sports">
+
+        <label for="Dallas Sports">Dallas Sports</label>
         <img src="assets/images/Dallas Sports.jpg" alt="Dallas Sports">
 
         
