fixed contact message

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <label for="femail">Email</label>
             <input type="text" id="femail" name="Email" placeholder="example@gmail.com">
             <label for="fmessage">Message</label>
-            <input type="text" id="fmessage" name="Message">
+            <textarea id="fmessage" name="Message"></textarea>
             <input type="submit" value="Submit">
 
        </div>
