--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,8 @@
+<!DOCTYPE>
+
+<html>
+
+
 <head>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
@@ -35,3 +40,4 @@
        <div class="footer"></div>
 
 </body>
+</html>
