--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,7 @@
+<!DOCTYPE>
+
+<html>
+
 <head>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
@@ -48,3 +52,4 @@
        <div class="footer"></div>
        
     </body>
+</html>
