--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE>
+
+<html>
+
 <head>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -35,4 +39,7 @@
    <div class="footer"></div>
    
 </body>
+</html>
+
+
 
