--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,10 @@
             <h1>Trey Marak</h1>
             <div class="boxset">
                     
-                    <figure class="About">About</figure>
-                    <figure class="Portfolio">Portfolio</figure>
-                    <figure class="Contact">Contact</figure>
+                <a href="index.html" class="About">About</a>
+                <a href="#" class="Portfolio">Portfolio</a>
+                <a href="contact.html" class="Contact">Contact</a>
+
             </div>
     </div>
      
