--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
     <div class="header">
         <h1>Trey Marak</h1>
     <div class="boxset">
-        <figure class="About">About</figure>
-        <figure class="Portfolio">Portfolio</figure>
-        <figure class="Contact">Contact</figure>
+        <a href="index.html" class="About">About</a>
+        <a href="portfolio.html" class="Portfolio">Portfolio</a>
+        <a href="#" class="Contact">Contact</a>
         </div>
     </div>
 
